objects/Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Severity__c</fullName>
        <description>This picklist determines the level of severity for the CR</description>
        <inlineHelpText>Select the level of severity for this CR.</inlineHelpText>
        <label>Severity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Service is down or Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service is highly degraded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial, non-critical loss of use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry, routine, minimal impact, feature</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sprint_Name__c</fullName>
        <label>Sprint Name</label>
        <picklist>
            <picklistValues>
                <fullName>* KTLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>* Sprint Undetermined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ackbar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cthulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donatello</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flagg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gygax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heisenberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice King</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jar-Jar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Klaatu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legless Legolas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal (6/15/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nightcrawler (6/29/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimus (7/13/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phantom (7/27/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q (8/10/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2 (8/24/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spock (9/7/15) (DF15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tron (9/21/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uhura (10/5/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voltron (10/19/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wonder Woman (11/2/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xavier (11/16/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yoda (11/30/15)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zhora (12/14/15)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>User Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Deactivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealmaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tinderbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apptus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not working as expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Merges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrections/Adjustments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMP_FOR_TESTING__c</fullName>
        <label>TEMP FOR TESTING</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Change_Reason__c</fullName>
        <label>Tier Change Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier_Level__c</fullName>
        <label>Tier Level</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_to_Complete__c</fullName>
        <label>Time to Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_to_Completion__c</fullName>
        <label>Time to Completion</label>
        <picklist>
            <picklistValues>
                <fullName>Quick Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <description>for reporting - not on page layout</description>
        <formula>TEXT(Sprint_Name__c)&amp;&quot;-&quot;&amp; TEXT(BU__c)  &amp;&quot;-&quot;&amp;  Subject__c &amp;&quot;-&quot;&amp; Name</formula>
        <inlineHelpText>used for reporting, not on page layout</inlineHelpText>
        <label>Unique Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ability to see if the Change request has a story associated with it. This helps for tracking the CRs.</description>
        <inlineHelpText>Ability to see if the Change request has a story associated with it for tracking the CRs</inlineHelpText>
        <label>User Story Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <label>Validity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Viable_Workaround__c</fullName>
        <label>Do you have a viable workaround?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View_Details__c</fullName>
        <description>This will copy the first line of the Details field on CR</description>
        <inlineHelpText>This will copy the first line of the Details field on CR</inlineHelpText>
        <label>View Details</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Notes_History__c</fullName>
        <label>Work Notes History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Notes__c</fullName>
        <description>Used to show work performed. Hidden to all but admins.</description>
        <label>Work Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Workaround_Notes__c</fullName>
        <description>Field used to record workaround</description>
        <inlineHelpText>Describe in detail the workaround you are currently using.</inlineHelpText>
        <label>Workaround Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>debug__c</fullName>
        <label>debug</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All_Open_By_Brand</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>Department__c</columns>
        <columns>Order__c</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Details__c</columns>
        <columns>Subject__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Change_Type__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filters>
        <label>All Open CRs By Brand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Ops</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Details__c</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,Under Review</value>
        </filters>
        <filters>
            <field>Change_Type__c</field>
            <operation>equals</operation>
            <value>Break-Fix,Routine</value>
        </filters>
        <label>All Open Ops</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SSG_Team_By_Enterprise_Ed</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Change_Type__c</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>View_Details__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Department__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Released</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Rob Swirbul</value>
        </filters>
        <label>** All SSG Team By Enterprise - Ed</label>
        <language>en_US</language>
        <sharedTo>
            <group>SSG_Scrum_Team</group>
            <group>SSG_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SSG_Team_Created</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filters>
        <filters>
            <field>BU__c</field>
            <operation>notEqual</operation>
            <value>Haystak,vAuto,VinSolutions</value>
        </filters>
        <label>All SSG Team Created</label>
        <language>en_US</language>
        <sharedTo>
            <group>SSG_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Curated_CRs_New_Only</fullName>
        <columns>NAME</columns>
        <columns>Change_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Details__c</columns>
        <columns>Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <columns>Department__c</columns>
        <columns>BU__c</columns>
        <columns>BU_Curator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Released,Under Review</value>
        </filters>
        <filters>
            <field>BU_Curator__c</field>
            <operation>equals</operation>
            <value>Tracy Fred,Mary Diffenderfer,David Goldstein</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Change_Request__c.Edit,Change_Request__c.New</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Curated CRs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Haystak</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filters>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>Haystak</value>
        </filters>
        <label>Haystak</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Haystak_Priority_Order</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Change_Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>Haystak</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Functionality</value>
        </filters>
        <filters>
            <field>Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>IsClosed__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filters>
        <filters>
            <field>Sub_Category__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filters>
        <label>Priority Order - Haystak</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Change_Requests3</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Details__c</columns>
        <columns>Request_Details__c</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Order__c</columns>
        <columns>Age__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>In Progress,New</value>
        </filters>
        <label>*My Open Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Change_Requests5</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Details__c</columns>
        <columns>Request_Details__c</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Order__c</columns>
        <columns>Age__c</columns>
        <filterScope>Mine</filterScope>
        <label>*My Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Last_Month</fullName>
        <columns>Change_Request_Status__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>BU__c</columns>
        <columns>Department__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>View_Details__c</columns>
        <columns>Priority__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Sprint_Name__c</columns>
        <columns>Change_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>FALSE</value>
        </filters>
        <label>*New This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Change_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Details__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_To__c</columns>
        <columns>Department__c</columns>
        <columns>BU__c</columns>
        <columns>BU_Curator__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>FALSE</value>
        </filters>
        <label>*New This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Today</fullName>
        <columns>Change_Request_Status__c</columns>
        <columns>BU__c</columns>
        <columns>Department__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>FALSE</value>
        </filters>
        <label>*New Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ops_Requests</fullName>
        <columns>Change_Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>BU_Curator__c</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Type__c</field>
            <operation>equals</operation>
            <value>Break-Fix,Routine,Training</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Change_Request__c.Edit</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>In Progress,New,Under Review</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Pending Approval,Cancelled,Pending Final Approval,In Progress</value>
        </filters>
        <label>Ops Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Priority_Order_Haystak_For_Review</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Subject__c</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>Haystak</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Functionality</value>
        </filters>
        <filters>
            <field>Sub_Category__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Priority Order -Haystak -For Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Priority_Order_VinSolutions_For_Review</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Change_Request_Status__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BU__c</field>
            <operation>equals</operation>
            <value>VinSolutions</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Functionality</value>
        </filters>
        <filters>
            <field>Sub_Category__c</field>
            <operation>equals</operation>
            <value>Feature</value>
        </filters>
        <filters>
            <field>Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Priority Order -VinSolutions -For Review</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Change Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Defect_Request</fullName>
        <active>true</active>
        <description>For resolving errors.</description>
        <label>Defect Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit</fullName>
        <active>true</active>
        <description>Edit view of Change Request</description>
        <label>Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feature_Request</fullName>
        <active>true</active>
        <description>For new functionality.</description>
        <label>Feature Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <description>For users to create a CR</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Routine_Request</fullName>
        <active>true</active>
        <description>For resolving data issues.</description>
        <label>Routine Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Needed_By_Must_Be_Today_or_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Needed_By__c &lt; TODAY() &amp;&amp;
(
   ISCHANGED(Date_Needed_By__c) ||
   ISNEW()
)</errorConditionFormula>
        <errorDisplayField>Date_Needed_By__c</errorDisplayField>
        <errorMessage>The Date Needed By cannot be a date in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Assignment_without_Request_Runner</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Assigned_To__c ) &amp;&amp;  Is_Assigned__c = FALSE</errorConditionFormula>
        <errorMessage>You must use the Assign Request Runner button to assign this Change Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Escalation_without_Request_Runner</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Escalated_To__c ) &amp;&amp;  Is_Escalated__c = FALSE</errorConditionFormula>
        <errorMessage>You must use the Escalate Request Runner button to escalate this Change Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Metadata_Changes</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(Metadata_Changes__c) &amp;&amp;
ISCHANGED(Change_Request_Status__c) &amp;&amp;
IsClosed__c = &quot;True&quot;</errorConditionFormula>
        <errorMessage>PUT SOMETHING IN THE METADATA CHANGES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Approval_Status_Change</fullName>
        <active>true</active>
        <description>Restricts changing the approval status for all users except SF system admins.</description>
        <errorConditionFormula>AND( 
ISCHANGED( Approval_Status__c ), 
NOT ( OR( 
$User.ProfileId = &quot;00e70000000wzXQ&quot;, /*VinSystem Admin*/
$User.ProfileId = &quot;00e70000001FaWM&quot;, /*VinSystem Dev Admin*/
$User.ProfileId = &quot;00e70000001FiDh&quot; /*VinSystem Jr Admin*/
) ) 
)</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>You do not have permission to change this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Close_Check</fullName>
        <active>true</active>
        <description>Prevent user from closing a change request if associated user stories do not have a status of closed. Related to W-000457.</description>
        <errorConditionFormula>AND(ISPICKVAL(Change_Request_Status__c, &quot;Closed&quot;),NOT(Are_All_Stories_Closed__c))</errorConditionFormula>
        <errorMessage>Please use the &quot;Close&quot; button in order to close the change request.</errorMessage>
    </validationRules>
</CustomObject>